{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 28,
  "lineage": "e89dc612-ae1b-5f2b-cfc7-2e44bd20843b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-appsubnet-nsg",
            "location": "eastus2",
            "name": "cloud-dev-vnet-default-appsubnet-nsg",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-bastionsubnet-nsg",
            "location": "eastus2",
            "name": "cloud-dev-vnet-default-bastionsubnet-nsg",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-dbsubnet-nsg",
            "location": "eastus2",
            "name": "cloud-dev-vnet-default-dbsubnet-nsg",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-websubnet-nsg",
            "location": "eastus2",
            "name": "cloud-dev-vnet-default-websubnet-nsg",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "cloud-dev-vnet-default-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "cloud-dev-vnet-default-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "cloud-dev-vnet-default-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "cloud-dev-vnet-default-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "cloud-dev-vnet-default-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "cloud-dev-vnet-default-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "cloud-dev-vnet-default-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "cloud-dev-vnet-default-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "cloud-dev-vnet-default-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "cloud-dev-vnet-default-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "cloud-dev-vnet-default-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "cloud-dev-vnet-default-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-appsubnet",
            "name": "cloud-dev-vnet-default-appsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "virtual_network_name": "cloud-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-bastionsubnet",
            "name": "cloud-dev-vnet-default-bastionsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "virtual_network_name": "cloud-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-dbsubnet",
            "name": "cloud-dev-vnet-default-dbsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "virtual_network_name": "cloud-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-websubnet",
            "name": "cloud-dev-vnet-default-websubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "virtual_network_name": "cloud-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-appsubnet",
            "network_security_group_id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-appsubnet-nsg",
            "subnet_id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-bastionsubnet",
            "network_security_group_id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-dbsubnet",
            "network_security_group_id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-dbsubnet-nsg",
            "subnet_id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-websubnet",
            "network_security_group_id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/networkSecurityGroups/cloud-dev-vnet-default-websubnet-nsg",
            "subnet_id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default/subnets/cloud-dev-vnet-default-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "93d8e10d-03b4-4c44-95ac-a8662c979b63",
            "id": "/subscriptions/3df0a617-8449-447a-b3b6-4da9b2d1e787/resourceGroups/cloud-dev-rg-default-ifrgwu/providers/Microsoft.Network/virtualNetworks/cloud-dev-vnet-default",
            "location": "eastus2",
            "name": "cloud-dev-vnet-default",
            "resource_group_name": "cloud-dev-rg-default-ifrgwu",
            "tags": {
              "environment": "dev",
              "owners": "cloud"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}